--- a/other/files/print_timing_function.html
+++ b/other/files/print_timing_function.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="../css/files.css"/>
+  <link rel="stylesheet" href="files.css"/>
   <link rel="stylesheet" href="../css/print_timing_functions.css"/>
 
 <style contenteditable class="editme">div {
