--- a/other/files/subset.html
+++ b/other/files/subset.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="files.css"/>
-  <link href="//fonts.googleapis.com/css?family=Rye&text=AEIOUaeiou" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css?family=Rye&text=AEIOUaeiou" rel="stylesheet" type="text/css" />
 
 <style contenteditable class="editme">p {
     font-family: 'Rye', sans-serif;
@@ -11,11 +11,11 @@
 <title>Fonts Subset</title>
 </head>
 
-<body><p>But I've never been to the moon! Shut up and get to the point! What are their names? Good news, everyone! There's a report on TV with some very bad news!
+<body><pre style="font-family: monospace">&lt;link  rel="stylesheet" 
+href="//fonts.googleapis.com/<br/>css?family=Rye:regular&amp;text=AEIOUaeiou"&gt;</pre><p>But I've never been to the moon! Shut up and get to the point! What are their names? Good news, everyone! There's a report on TV with some very bad news!
 
 I'm sure those windmills will keep them cool. This is the worst part. The calm before the battle. I can explain. It's very valuable. You wouldn't. Ask anyway! I daresay that Fry has discovered the smelliest object in the known universe! I've been there. My folks were always on me to groom myself and wear underpants. What am I, the pope?</p>
-<pre style="font-family: monospace">&lt;link  rel="stylesheet" 
-href="//fonts.googleapis.com/css?family=Rye:regular&text=AEIOUaeiou"&gt;</pre>
+
 </body>
 </html>
 
