edits to other section

--- a/other/index.html
+++ b/other/index.html
@@ -11,13 +11,13 @@
 	width: 170px; height: 70px; line-height:70px;
 	float: left; margin: 0 15px 15px 0;
 	border-radius: 15px; text-align:center;
-	background: linear-gradient(hsl(171, 27%, 80%), hsl(171, 15%, 80%));
+	background: linear-gradient(rgba(200, 0, 0, .4), rgba(200, 0, 0, .6));
 	box-shadow: 3px 3px 3px rgba(0,0,0,0.3), inset 1px 1px #fff;
 	list-style-type: none;
  }
  .cursors ul:last-of-type li {
 
-	background: linear-gradient(hsl(171, 47%, 80%), hsl(171, 35%, 80%));
+	background: linear-gradient(rgba(200, 0, 0, .2), rgba(200, 0, 0, .4));
  }
  div.example {
 display: block;
@@ -476,6 +476,13 @@ border-width: 5px;
   &lt;/fieldset&gt;
 </pre></div>
 
+
+<!--  -->
+<div class="slide intro">
+  <header><h1>Other Stuff</h1></header>
+  <section class="content">
+  </section>
+</div>
 
 <div class="slide normal cursors" style="padding: 0">
      <header><h1>Cursors</h1></header>
