fix: slide link relationship

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ p, ul {font-family: helvetica}
 <div class="slide">
   <header><h1>Including CSS</h1></header>
     <section class="content"><p>External Style Sheet</p>
-<pre>&lt;link href=“stylesheet” href=“path/file.css” /&gt;</pre>
+<pre>&lt;link rel=“stylesheet” href=“path/file.css” /&gt;</pre>
 <p>
 Embedded Styles</p>
 <pre>&lt;style>
